--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
       <button onclick="exportCSV()">Export as CSV</button>
     </div>
 
-    <form id="input-form">
-      <label for="income">Income (Monthly): </label>
+    <label for="income">Income (Monthly): </label>
       <input type="number" id="income" placeholder="Income amount" required/>
+  
+    <form id="input-form">
+      <input type="number" id="budget" placeholder="Optional Budget Limit" />
       <input type="text" id="category" placeholder="Category (e.g. Food)" required />
       <input type="number" id="amount" placeholder="Amount" required />
       <button type="submit">Add Expense</button>
@@ -123,6 +125,8 @@
     const ctx = document.getElementById("spendingChart").getContext("2d");
     const barCtx = document.getElementById("barChart").getContext("2d");
     const lineCtx = document.getElementById("lineChart").getContext("2d");
+    const budgetGoals = {};
+    
 
     const spendingData = {
       labels: ["Food", "Transport", "Entertainment", "Education", "Other"],
@@ -249,7 +253,10 @@
       e.preventDefault();
       const category = document.getElementById("category").value;
       const amount = parseFloat(document.getElementById("amount").value);
-
+      const budget = parseFloat(document.getElementById("budget").value);
+      if (!isNaN(budget) && budget > 0) {
+         budgetGoals[category] = budget;
+      }
       const index = spendingData.labels.indexOf(category);
       if (index > -1) {
         spendingData.datasets[0].data[index] += amount;
