--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <option value="2025">2024-2025</option>
           </select>
         </label>
+        <label>Income: <input type="number" id="income" placeholder="Enter your income" /></label
         <button onclick="filterData()">Filter Data</button>
   </div>
   
